# ITUNet-for-PICAI-2022-Challenge

./: Dockerfile  LICENSE  README.md  build.sh  requirements.txt  setup.cfg  setup.py  step_3_generate_pseudo_labels.py  step_3_prepare_detection_data.py  step_4_semi_supervised_segmentation.py  train_1_classification.py  train_2_segmentation.py  train_3_pseudo_labels.py  train_4_segmentation.py
classification/: README.md  cls_data.py  config.py  requirements.txt  run.py  trainer.py  utils.py
classification/data_utils/: csv_reader.py  data_loader.py  transforms.py
dockers/0_preprocessing/: Dockerfile  build.sh
dockers/1_classification/: Dockerfile  build.sh
dockers/2_segmentation/: Dockerfile
preprocess/: README.md  make_dataset.py  make_json.py  mha2nnunet_settings2201.json  precess_testdata.py  preprocess.py  requirements.txt
preprocess/src/picai_prep/: mha2nnunet.py
preprocess/src/picai_prep/examples/mha2nnunet/: picai_archive.py
segmentation/: README.md  config.py  data_loader.py  loss.py  make_dataset.py  predict_2d.py  requirements.txt  run.py  trainer.py  utils.py
segmentation/picai_eval/: __init__.py  eval.py
submit_result/: .dockerignore  .gitattributes  .gitignore  Dockerfile  build.bat  build.sh  export.bat  export.sh  model.py  process.py  requirements.txt  setup.cfg  test.bat  test.sh
submit_result/test/: clinical-information-prostate-mri.json  cspca-case-level-likelihood.json
submit_result/test/cspca-detection-map/: cspca_detection_map.mha
submit_result/test/images/coronal-t2-prostate-mri/: 10032_1000032_cor.mha
submit_result/test/images/cspca-detection-map/: cspca_detection_map.mha
submit_result/test/images/sagittal-t2-prostate-mri/: 10032_1000032_sag.mha
submit_result/test/images/transverse-adc-prostate-mri/: 10032_1000032_adc.mha
submit_result/test/images/transverse-hbv-prostate-mri/: 10032_1000032_hbv.mha
submit_result/test/images/transverse-t2-prostate-mri/: 10032_1000032_t2w.mha
training_dockers/1_classification/: .dockerignore  Dockerfile
training_dockers/2_segmentation/: Dockerfile  build.sh
