[metadata]
name = itunet_picai
description = ITUNet-for-PICAI-2022-Challenge
author = Yukiya Umimi
license = Apache License, Version 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    itunet_picai
install_requires =
    dataclasses
    jsonschema
    numpy
    pydicom
    picai-prep==2.1.2
    efficientnet_pytorch
    scikit-image==0.20.0
    scikit-learn
    scipy
    SimpleITK
    tqdm
    torch
    torchvision
    tensorboardX
    picai_eval==1.4.4
    einops

python_requires = >=3.6
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
itunet_picai = py.typed

[flake8]
max-line-length = 160
