[metadata]
name = picai_unet_gc_algorithm
description = UNet model for 3D csPCa detection/diagnosis in bpMRI, deployable on grand-challenge.org
author = Anindo Saha
license = Apache License, Version 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    picai_unet_gc_algorithm
install_requires =
    evalutils==0.3.0
    numpy>=1.19.5
    pandas>=1.2.4
    SimpleITK>=2.1.1.2
    scikit_learn>=1.0.2
    scikit_image>=0.18.1
    torch>=1.9.0+cu111
    torchvision>=0.10.0+cu111
    threadpoolctl>=3.1.0
    monai>=0.8.0
    batchgenerators>=0.23
    picai_baseline @ git+https://github.com/DIAGNijmegen/picai_baseline#egg=picai_baseline

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
picai_baseline = py.typed

[flake8]
max-line-length = 160
